--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-jest": "^14.1.0",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.3.1",
