--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
     - 5
     - 4
 script:
-    - npm run lint
-    - npm test
+    - yarn lint
+    - yarn test
 after_script:
-    - npm run coverage
+    - yarn coverage
