--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "coverage": "coveralls < coverage/lcov.info",
     "lint": "eslint src",
-    "test": "jest"
+    "test": "jest -c jest.json"
   },
   "repository": {
     "type": "git",
@@ -31,26 +31,8 @@
     "coveralls": "^2.11.15",
     "eslint": "^3.10.2",
     "eslint-plugin-react": "^6.7.1",
-    "jest": "^17.0.3",
-    "jest-cli": "^17.0.3",
+    "jest-cli": "^19.0.2",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
-  },
-  "jest": {
-    "automock": false,
-    "collectCoverage": true,
-    "coverageThreshold": {
-      "global": {
-        "branches": 50,
-        "functions": 50,
-        "lines": 50,
-        "statements": 50
-      }
-    },
-    "modulePaths": [
-      "src"
-    ],
-    "testRegex": "test.js$",
-    "verbose": true
   }
 }
